start cleaning production table

--- a/code_katherine/country_by_region.ipynb
+++ b/code_katherine/country_by_region.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "tables = pd.read_html(url)\r\n",
     "tables[0]"
@@ -143,9 +143,27 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "country_regions = tables[0]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "country_regions.to_csv('country_region.csv')"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
