--- a/code_katherine/country_by_region.ipynb
+++ b/code_katherine/country_by_region.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import pandas as pd"
    ],
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "url = 'https://meta.wikimedia.org/wiki/List_of_countries_by_regional_classification'"
    ],
@@ -146,6 +146,34 @@
      "execution_count": 4
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "country_regions = tables[0]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "# drop Global column\r\n",
+    "country_regions = country_regions.drop(\"Global South\", axis = 1)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "country_regions.to_csv('country_region.csv', index=False)"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
