replaced lost code

--- a/code_katherine/country_by_region.ipynb
+++ b/code_katherine/country_by_region.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "source": [
     "import pandas as pd"
    ],
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "source": [
     "url = 'https://meta.wikimedia.org/wiki/List_of_countries_by_regional_classification'"
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "source": [
     "tables = pd.read_html(url)\r\n",
     "tables[0]"
@@ -143,14 +143,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 22
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "source": [
     "country_regions = tables[0]"
    ],
@@ -159,9 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "source": [
-    "country_regions.to_csv('country_region.csv')"
+    "country_regions = country_regions.drop(\"Global South\", axis = 1)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "source": [
+    "country_regions.to_csv('country_regions.csv', index=False)"
    ],
    "outputs": [],
    "metadata": {}
