tables to sql added in code

--- a/Mel code/agri_value.ipynb
+++ b/Mel code/agri_value.ipynb
@@ -2,18 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "source": [
-    "import pandas as pd"
+    "from sqlalchemy import create_engine\r\n",
+    "import pandas as pd\r\n",
+    "from config import username\r\n",
+    "from config import password\r\n",
+    "engine = create_engine(f\"postgresql://{username}:{password}@localhost:5432/ETL_project\")\r\n",
+    "connection = engine.connect()"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "source": [
-    "value_ag_df = pd.read_csv(\"Resources/value_agriculture.csv\")\r\n",
+    "value_ag_df = pd.read_csv(\"..//Resources/value_agriculture.csv\")\r\n",
     "value_ag_df.head()"
    ],
    "outputs": [
@@ -169,14 +174,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "source": [
     "value_columns = [\"Area\", \"Element\", \"Year\", \"Unit\", \"Value\"]\r\n",
     "new_value_ag_df = value_ag_df[value_columns].copy()\r\n",
@@ -274,14 +279,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "source": [
     "new_value_ag_df[\"Element\"] = new_value_ag_df[\"Element\"].str[:22]\r\n",
     "new_value_ag_df.head()"
@@ -371,14 +376,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "source": [
     "new_value_ag_df.to_csv(\"Resources.cleaned_value_ag.csv\")"
    ],
@@ -387,15 +392,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 9,
+   "source": [
+    "engine = create_engine(f\"postgresql://{username}:{password}@localhost:5432/ETL_project\")\r\n",
+    "connection = engine.connect()"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 11,
+   "source": [
+    "new_value_ag_df.to_sql(name='new_value_ag_df', con=engine, if_exists='append', index=False)"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -425,7 +435,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.6.10",
+   "version": "3.6.13",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
