--- a/Mel code/trade_matrix.ipynb
+++ b/Mel code/trade_matrix.ipynb
@@ -2,18 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "source": [
-    "import pandas as pd"
+    "from sqlalchemy import create_engine\r\n",
+    "import pandas as pd\r\n",
+    "from config import username\r\n",
+    "from config import password\r\n",
+    "engine = create_engine(f\"postgresql://{username}:{password}@localhost:5432/ETL_project\")\r\n",
+    "connection = engine.connect()"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "source": [
-    "trade_df = pd.read_csv(\"Resources/detailed_trade_matrix.csv\")\r\n",
+    "trade_df = pd.read_csv(\"..//Resources/detailed_trade_matrix.csv\")\r\n",
     "trade_df.head(2)"
    ],
    "outputs": [
@@ -119,14 +124,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "source": [
     "trade_columns = [\"Reporter Countries\", \"Partner Countries\", \"Element\", \"Year\", \"Unit\", \"Value\"]\r\n",
     "new_trade_df = trade_df[trade_columns].copy()\r\n",
@@ -230,14 +235,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "source": [
     "new_trade_df = new_trade_df.rename(columns={\"Reporter Countries\": \"Reporter_countries\",\r\n",
     "                                     \"Partner Countries\": \"Partner_countries\"})\r\n",
@@ -342,14 +347,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "source": [
     "new_trade_df.columns"
    ],
@@ -364,14 +369,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "source": [
     "# split into 4 different elements\r\n",
     "import_qty = new_trade_df.loc[new_trade_df[\"Element\"] == \"Import Quantity\"]\r\n",
@@ -384,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "source": [
     "# drop zero values\r\n",
     "import_qty = import_qty[import_qty[\"Value\"] != 0]\r\n",
@@ -397,137 +402,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "source": [
     "# merge tables\r\n",
     "df1 = pd.merge(import_qty, import_value, how=\"outer\", on=[\"Reporter_countries\", \"Partner_countries\", \"Year\"])\r\n",
     "df2 = pd.merge(export_qty, export_value, how=\"outer\", on=[\"Reporter_countries\", \"Partner_countries\", \"Year\"])\r\n",
     "df_3 = pd.merge(df1,df2, how=\"outer\", on=[\"Reporter_countries\", \"Partner_countries\", \"Year\"])"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Reporter_countries</th>\n",
-       "      <th>Partner_countries</th>\n",
-       "      <th>Element_x</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Unit_x</th>\n",
-       "      <th>Value_x</th>\n",
-       "      <th>Element_y</th>\n",
-       "      <th>Unit_y</th>\n",
-       "      <th>Value_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>Iran (Islamic Republic of)</td>\n",
-       "      <td>Import Quantity</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>tonnes</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Import Value</td>\n",
-       "      <td>1000 US$</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>United Arab Emirates</td>\n",
-       "      <td>Import Quantity</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>tonnes</td>\n",
-       "      <td>508.0</td>\n",
-       "      <td>Import Value</td>\n",
-       "      <td>1000 US$</td>\n",
-       "      <td>1986.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>Greece</td>\n",
-       "      <td>Import Quantity</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>tonnes</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>Import Value</td>\n",
-       "      <td>1000 US$</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>Greece</td>\n",
-       "      <td>Import Quantity</td>\n",
-       "      <td>1997</td>\n",
-       "      <td>tonnes</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Import Value</td>\n",
-       "      <td>1000 US$</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>Greece</td>\n",
-       "      <td>Import Quantity</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>tonnes</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Import Value</td>\n",
-       "      <td>1000 US$</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Reporter_countries           Partner_countries        Element_x  Year  \\\n",
-       "0        Afghanistan  Iran (Islamic Republic of)  Import Quantity  2017   \n",
-       "1        Afghanistan        United Arab Emirates  Import Quantity  2014   \n",
-       "2            Albania                      Greece  Import Quantity  1996   \n",
-       "3            Albania                      Greece  Import Quantity  1997   \n",
-       "4            Albania                      Greece  Import Quantity  2003   \n",
-       "\n",
-       "   Unit_x  Value_x     Element_y    Unit_y  Value_y  \n",
-       "0  tonnes      1.0  Import Value  1000 US$      2.0  \n",
-       "1  tonnes    508.0  Import Value  1000 US$   1986.0  \n",
-       "2  tonnes     12.0  Import Value  1000 US$      9.0  \n",
-       "3  tonnes      2.0  Import Value  1000 US$      2.0  \n",
-       "4  tonnes      1.0  Import Value  1000 US$      2.0  "
-      ]
-     },
-     "metadata": {},
-     "execution_count": 31
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "source": [
     "df_3.dropna(inplace=True)\r\n",
     "df_3.head()\r\n",
@@ -712,16 +599,35 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 23
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "source": [
     "new_trade_df.to_csv(\"Resources.cleaned_trade_matrix.csv\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "engine = create_engine(f\"postgresql://{username}:{password}@localhost:5432/ETL_project\")\r\n",
+    "connection = engine.connect()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "source": [
+    "new_trade_df.to_sql(name='new_trade_df', con=engine, if_exists='append', index=False)"
    ],
    "outputs": [],
    "metadata": {}
@@ -731,7 +637,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.6.10",
+   "version": "3.6.13",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
