found difference between two country lists

--- a/code_katherine/analyse_crop_production_by_area.ipynb
+++ b/code_katherine/analyse_crop_production_by_area.ipynb
@@ -912,6 +912,63 @@
             ],
             "outputs": [],
             "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 56,
+            "source": [
+                "li1=country_production[\"Country\"]\r\n",
+                "li2=country_region[\"Country\"]\r\n",
+                "def Diff(li1, li2):\r\n",
+                "    return list(set(li1) - set(li2)) + list(set(li2) - set(li1))\r\n",
+                "\r\n",
+                "li3 = Diff(li1, li2)\r\n",
+                "print(li3)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "['Low Income Food Deficit Countries', 'Net Food Importing Developing Countries', 'Bolivia (Plurinational State of)', 'Americas', 'Asia', 'Africa', 'Land Locked Developing Countries', 'Caribbean', 'China, Taiwan Province of', 'Western Africa', 'Small Island Developing States', 'United Republic of Tanzania', 'Middle Africa', 'Least Developed Countries', 'Eastern Africa', 'Central America', 'Melanesia', \"Côte d'Ivoire\", 'Democratic Republic of the Congo', 'South-eastern Asia', 'Polynesia', 'Venezuela (Bolivarian Republic of)', 'Oceania', 'Micronesia', 'South America', 'Southern Asia', 'Eastern Asia', 'Micronesia (Federated States of)', 'World', 'Senegal', 'Marshall Islands', 'Netherlands', 'Lesotho', 'Virgin Islands, British', 'Ukraine', 'Heard Island and McDonald Islands', 'Italy', 'Egypt', 'Iraq', 'Singapore', 'Andorra', 'Poland', 'Georgia', 'Gambia', 'Norfolk Island', 'Burundi', 'Bahamas', 'France, Metropolitan', 'Mali', 'Turkmenistan', 'Gibraltar', 'Aruba', 'French Guiana', 'Hungary', 'Bangladesh', 'Estonia', 'Cambodia', 'Turkey', 'Faroe Islands', 'Latvia', 'Puerto Rico', 'Spain', 'Cyprus', 'Mozambique', 'Netherlands Antilles', 'Jordan', 'Uruguay', 'Palau', 'Antigua and Barbuda', 'Moldova, Republic of', 'Namibia', 'Ireland', 'Niue', 'United Arab Emirates', 'Isle of Man', 'South Africa', 'Serbia', 'Nauru', 'Anguilla', 'Chad', 'Uzbekistan', 'Saint Martin', 'Saint Helena', 'Finland', 'Belgium', 'Saint Pierre and Miquelon', 'Bouvet Island', 'Korea, Republic of', 'Holy See (Vatican City State)', 'Norway', 'British Indian Ocean Territory', 'Macau', 'Somalia', 'Guinea-Bissau', 'Japan', 'Kyrgyzstan', 'Austria', 'Saint Barthelemy', 'Swaziland', 'French Southern Territories', 'Iran, Islamic Republic of', 'Niger', 'Eritrea', 'Monaco', 'New Zealand', 'Mayotte', 'South Georgia and the South Sandwich Islands', 'Malawi', 'Canada', 'Turks and Caicos Islands', 'Paraguay', 'Argentina', 'San Marino', 'Czech Republic', 'France', 'Venezuela', 'Mongolia', 'Cape Verde', 'Oman', 'Armenia', 'Yemen', 'Macedonia', 'Libya', 'Bermuda', 'Algeria', 'Djibouti', 'Qatar', 'Guernsey', 'Azerbaijan', \"Lao People's Democratic Republic\", 'Russian Federation', 'Falkland Islands (Malvinas)', 'Bhutan', 'Slovakia', 'Albania', 'Aland Islands', 'South Sudan', 'Syrian Arab Republic', 'Western Sahara', 'American Samoa', 'United States', 'Morocco', 'Cook Islands', 'Kenya', 'Tanzania, United Republic of', 'Cocos (Keeling) Islands', 'Afghanistan', 'Germany', 'Maldives', 'Tuvalu', 'Micronesia, Federated States of', 'Pakistan', 'Zambia', 'Bahrain', 'Luxembourg', 'Kuwait', 'United States Minor Outlying Islands', 'Montenegro', 'Brunei Darussalam', 'Tokelau', 'Vietnam', 'Northern Mariana Islands', 'Sudan', 'Tunisia', 'Wallis and Futuna', 'Botswana', 'Virgin Islands, U.S.', 'Lebanon', 'Australia', 'Switzerland', 'Myanmar', 'Taiwan', 'Mauritania', 'Portugal', 'Kazakhstan', 'Saudi Arabia', 'Jersey', 'Slovenia', 'Greenland', 'Saint Kitts and Nevis', 'Tajikistan', \"Korea, Democratic People's Republic of\", 'Reunion', 'Romania', 'French Polynesia', 'Svalbard and Jan Mayen', 'Bolivia', 'Zimbabwe', 'Antarctica', 'Cayman Islands', 'Rwanda', 'Chile', 'Ethiopia', 'Guam', 'Iceland', 'Montserrat', \"Côte D'Ivoire\", 'Israel', 'Nepal', 'Burkina Faso', 'United Kingdom', 'Lithuania', 'Kiribati', 'New Caledonia', 'Christmas Island', 'Denmark', 'Pitcairn Islands', 'Greece', 'Belarus', 'Malta', 'Bulgaria', 'Sweden', 'Liechtenstein', 'Hong Kong', 'Seychelles', 'Croatia', 'Palestinian Territory', 'Congo, The Democratic Republic of the', 'Barbados', 'Mauritius', 'Bosnia and Herzegovina']\n"
+                    ]
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 57,
+            "source": [
+                "len(li3)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "221"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 57
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "new_trade_df.replace(to_replace={\"Belgium-Luxembourg\": \"Belgium\"}, inplace=True)\r\n",
+                "new_trade_df.replace(to_replace={\"Venezuela (Bolivarian Republic of)\": \"Venezuela\"}, inplace=True)\r\n",
+                "new_trade_df.replace(to_replace={\"Iran (Islamic Republic of)\": \"Iran\"}, inplace=True)\r\n",
+                "new_trade_df.replace(to_replace={\"Bolivia (Plurinational State of)\": \"Bolivia\"}, inplace=True)\r\n",
+                "new_trade_df.replace(to_replace={\"Sudan (former)\": \"Sudan\"}, inplace=True)\r\n",
+                "new_trade_df.replace(to_replace={\"Democratic Republic of the Congo\": \"Congo, The Democratic Republic of the\"}, inplace=True)\r\n"
+            ],
+            "outputs": [],
+            "metadata": {}
         }
     ],
     "metadata": {
